# mdb

./: .gitignore  Pipfile  README  README.md  dhcp_sync.py  dns_sync.py  fabfile.py  manage.py  pyproject.toml  requirements.txt  settings-sample.py  settings.py  urls.py
apache/: README  django.wsgi
mdb/: __init__.py  admin.py  apps.py  forms.py  models.py  pxe.py  settings-sample.py  signals.py  tests.py  urls.py  utils.py  validators.py  views.py
mdb/api/: serializers.py  views.py
mdb/fixtures/: test_data.json
mdb/management/commands/: dhcp-sync.py  zone-sync.py
mdb/migrations/: 0001_initial.py  0002_auto_20141229_2309.py  0003_auto_20150822_2156.py  0004_auto_20150822_2157.py  0005_auto_20150822_2204.py  0006_auto_20151001_2235.py  0007_auto_20151003_1313.py  0008_auto_20151004_1258.py  0009_auto_20151004_1652.py  0010_auto_20151004_1709.py  0011_auto_20160325_1412.py
mdb/templates/: base-menu.html  base.html  host.django.html  index.django.html  info.django.html  pxelinux.cfg  zone_file.txt
mdbsite/: settings.py  urls.py  wsgi.py
scripts/: README  dhcp_synchronizer.py  env_setup.sh  ping_service.py  rrd_graphgen.py  rrd_service.py  zone_file_creator.py  zone_synchronizer.py
udb/: admin.py  models.py
wsgi/: wsgi.py
