[tool.poetry]
name = "mdb"
version = "0.1.0"
description = "Machine Database - A Django app for managing computer equipment"
license = "GPL-2.0-or-later"
authors = ["EDB <edb@neuf.no>"]

[tool.poetry.dependencies]
python = "^3.6"
django-auth-ldap = "*"
django-extensions = "*"
Django = "*"
djangorestframework = "*"
fabric = "*"
gunicorn = "*"
ipaddress = "*"
mysqlclient = "*"
sentry-sdk = "*"

[tool.poetry.dev-dependencies]
black = "*"
fabric = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
